# pyaftership

./: .coveragerc  .devcontainer.json  .gitlab-ci.yml  .travis.yml  LICENCE.md  Makefile  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  issue.md
.github/workflows/: actions.yml  release-drafter.yml  release.yml
pyaftership/: __init__.py  aftership.py  base.py  const.py  couriers.py  exceptions.py  tracker.py  trackings.py
scripts/: lint
tests/: common.py  test_base.py
tests/couriers/: test_detect.py
tests/fixtures/: delete_trackings.json  error_created_tracking_number_is_failed.json  error_invalid_api_key.json  error_server_is_down.json  get_trackings.json  post_couriers_detect.json  post_trackings.json
tests/trackings/: test_add.py  test_add_tracking.py  test_delete_tracking.py  test_list.py  test_list_trackings.py  test_remove.py
