[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "pyaftership"
version = "main"
license = "MIT"
license-files = ["LICENCE.md"]
description = "Async Python wrapper for the AfterShip API."
readme = "README.md"
authors = [{ name = "Ludeeus", email = "hi@ludeeus.dev" }]
requires-python = ">=3.12"
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "aiohttp>=3.6.1,<4.0",
]

[project.urls]
"Source code" = "https://github.com/ludeeus/pyaftership"

[tool.setuptools.packages.find]
include = ["pyaftership*"]
